Fixes #3 - Odd header layout on mobile

--- a/assets/scss/components/_arrows.scss
+++ b/assets/scss/components/_arrows.scss
@@ -1,5 +1,5 @@
 .down-arrow {
-  margin: 6rem 0 3rem;
+  margin: 0rem 0 6rem;
   text-align: center;
   font-size: 1.6rem;
   text-indent: 9999px;
